# pleat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PORT_NOTES.md  README.md  SECURITY.md  banner.ascii  deny.toml  reproduce.sh
.github/workflows/: ci.yml  publish.yml
benches/: construct.rs  query.rs  serde.rs
benches/results/: 10000000_arrival.json  10000000_parallel_8t.json  10000000_pleated.json  1000000_arrival.json  1000000_parallel_8t.json  1000000_pleated.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode.rs  roundtrip.rs
src/: banding.rs  banding128.rs  filter.rs  format.rs  hash.rs  hash128.rs  lib.rs
src/filter/: parallel.rs
tests/vectors/: homog_w64_r7.json  std_w128_r7.json
tools/: Makefile  vecgen.cc  vecgen128.cc
