[package]
name = "pleat"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Ribbon filters with pleated (partition-instead-of-sort) construction: build at Bloom-filter speed, verify by checksum."
license = "MIT OR Apache-2.0"
authors = ["Brian Sam-Bodden <bsb@integrallis.com>"]
repository = "https://github.com/integrallis/pleat"
keywords = ["ribbon-filter", "bloom-filter", "amq", "probabilistic", "filter"]
categories = ["data-structures", "algorithms"]
include = ["src/**/*.rs", "tests/vectors/*.json", "README.md", "LICENSE", "LICENSE-APACHE", "CHANGELOG.md"]
readme = "README.md"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = ["parallel"]
parallel = []  # slot-range parallel construction (uses std::thread; no extra deps)

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "construct"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "serde"
harness = false
